--- a/styles/Blog.css
+++ b/styles/Blog.css
@@ -6,6 +6,16 @@
   color: #677294; 
   margin-top: 4rem;
 }
+.map{
+  margin: auto auto;
+  height: 100vh !important;
+  width: 100%;
+}
+.map_div{
+  margin: auto auto;
+  height: 100vh !important;
+  width: 90%;
+}
 @media screen and (max-width: 767px) {
   .blog_post{
     width: 90%;
