--- a/styles/Blog.css
+++ b/styles/Blog.css
@@ -16,7 +16,7 @@
   height: 100vh !important;
   width: 90%;
 }
-@media screen and (max-width: 767px) {
+@media sceen and (max-width: 767px) {
   .blog_post{
     width: 90%;
   } 
@@ -47,8 +47,10 @@
 }
 
 .blog_content_img{
-width: 35%;
-min-width: 280px;
+width: 17%;
+min-width: 150px;
+margin-top: -1.5rem;
+/* display: none; */
 }
 
 .featured_blog_img{
@@ -60,12 +62,27 @@ table{
   width: 100%;
   margin-top: 2rem !important;
 }
+/* table{
+  max-height: 30vh !important;
+  overflow-y: scroll;
+  
+} */
+
+::-webkit-scrollbar {
+  width: 0;
+  background-color: transparent;
+}
 .table_tr{
  
   display: flex;
   justify-content: center;
   align-items: stretch;
   color: black;
+
+}
+tbody{
+  max-height: 20vh !important;
+  overflow-y: scroll !important;
 }
 .table_tr>th{
  
@@ -79,6 +96,7 @@ table{
   background-color: #E5E7EB;
   padding: 1rem;
   font-weight: 300;
+
   
 }
 .table_tr>th>p{
