--- a/components/blog-card/BlogCards.css
+++ b/components/blog-card/BlogCards.css
@@ -2,12 +2,18 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  /* min-width: 30%; */
   gap: 1em;
 
 }
-
-.blog_card_component{
+.blog_card_img{
+  margin: auto auto;
+}
+.blog_link{
   width: 32%;
+}
+.blog_card_component{
+  width: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px;
@@ -40,6 +46,9 @@
 }
 @media screen and (max-width: 862px) {
 .blog_card_component{
+  width: 100%;
+}
+.blog_link{
   width: 45%;
 }
 .blog_card_title,.blog_card_text {
@@ -48,9 +57,9 @@
 }
 
 @media screen and (max-width: 550px) {
-  .blog_card_component{
+
+  .blog_link{
     width: 100%;
-   
   }
   .blog_card_title,.blog_card_text {
     width: 100%;
