--- a/components/Footer/Footer.css
+++ b/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer{
   background-color: #061A28;
-  padding:2rem 3rem;
+  padding:3.5rem 3rem;
   display: flex;
   justify-content: space-between;
 }
@@ -75,8 +75,10 @@
   align-items: center;
   padding: 1rem;
  }
+
  .footer_col_1,.footer_col_2{
-  width: 100%;
+  width: 90%;
+  margin-bottom: 3rem;
   text-align: center;
   margin-top: 2rem;
   display: flex;
@@ -86,5 +88,6 @@
  }
  .footer_text{
   width: 100%;
+  margin-top: .7rem;
  }
 }
