--- a/components/content-section/ContentSection.css
+++ b/components/content-section/ContentSection.css
@@ -80,12 +80,20 @@ margin: auto auto;
   box-shadow: 0px 4px 6px 0px rgb(12 0 46 / 6%);
 }
 @media screen and (max-width: 426px) {
+  .content_section{
+    height: 50vh;
+  }
   .content_text{
     width: 100%;
     text-align: center;
   }
   .content_section1{
-    width: 97%;
+    width: 97.5%;
+    padding:1rem 1rem;
+  }
+  .content_section1>p{
+    text-align: justify;
+    padding:3rem 1rem;
   }
   .content_title{
     font-size: 1.5rem !important;
