--- a/styles/globals.css
+++ b/styles/globals.css
@@ -159,7 +159,7 @@ color: white;
     padding-top: 1rem !important;
   }
 }
-/* .bd_red{
+.bd_red{
   border:1px solid red
 }
 
@@ -180,4 +180,4 @@ color: white;
 
 .bd_red{
   border:1px solid red
-} */
+}
