--- a/components/content-section/ContentSection.css
+++ b/components/content-section/ContentSection.css
@@ -15,10 +15,13 @@ margin-top: 4rem !important;
 .content_section>h1{
   font-size: 3rem;
   text-align: center;
+  margin: auto auto;
   color: white;
   margin-top: 2rem;
+  width: 80%;
 
 }
+
 .content_section::before{
  
   content: '';
@@ -79,9 +82,11 @@ margin: auto auto;
   border-radius: 10px;
   box-shadow: 0px 4px 6px 0px rgb(12 0 46 / 6%);
 }
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 428px) {
   .content_section{
+    /* padding-top: 1rem ; */
     height: 50vh;
+    
   }
   .content_text{
     width: 100%;
@@ -97,12 +102,28 @@ margin: auto auto;
   }
   .content_title{
     font-size: 1.5rem !important;
+  
+
+  }
+  .content_section>h1{
+    width: 100%;
+    /* padding-top: 1rem !important; */
+    padding:.7rem;
   }
 }
 
 @media screen and (max-width:780px){
   .content_title>h1{
-   margin-top:0 !important;
+   margin-top:-1rem !important;
+
+  }
+  .content_section>h1{
+    margin-top: 0;
+  }
+  .content_section{
+    margin-top: 0;
+    padding:0;
+  
   }
 }
 .mt-3{
