--- a/components/content-section/ContentSection.css
+++ b/components/content-section/ContentSection.css
@@ -110,7 +110,7 @@ margin: auto auto;
     height: auto;
   }
   .mt_negative{
-    margin-top: -10rem !important;
+    margin-top: -1rem !important;
   }
 }
 
@@ -129,9 +129,8 @@ margin: auto auto;
   .content_section>h1{
     margin-top: 0;
   }
-  .content_section{
-
-  
+  .mt_negative{
+    margin-top: -1rem !important;
   }
 }
 .mt-3{
